[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_email"
version = "0.0.0"
description = "Sending email with python"
readme = "README.rst"
authors = [
  {name = "Alexander Daniel Pratama", email = "alexanderdan.pratama@gmail.com"}
]
maintainers = [
  {name = "Alexander Daniel Pratama", email = "alexanderdan.pratama@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/andapra/python_email/issues"
changelog = "https://github.com/andapra/python_email/blob/master/changelog.md"
homepage = "https://github.com/andapra/python_email"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

